--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="row-md-4">
 
                 <button type="button" class="btn btn-warning btn-lg" id="btn_local" onclick=loadLocal()>
-                    Click aqui para cargar la ultima data cargada
+                    Click aqui para mostrar los paquetes
                 </button>
                 
                 
