--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
     
 
-    <div class="container-fluid">
+    <div class="container">
         <div class="col">
             <div class="row-md-4">
                 <h2>ALI HELPER</h2>
